# Fabricore

./: .dockerignore  README.md  docker-compose.yml  reset_db.sh
api/: .dockerignore  Dockerfile  Fabricore.slnx
api/Api/: Program.cs  appsettings.json
api/Api/Controllers/: Commands.cs  Factory.cs  Parts.cs
api/Api/Properties/: launchSettings.json
api/Api/RPC/: MachineCommandDispatcher.cs  MachineTelemetry.cs
api/Api/Realtime/: FactoryEvent.cs  FactoryEventBroadcaster.cs
api/Api/Requests/: CreateCommand.cs
api/Api/Responses/: CreateCommand.cs
api/App/: App.csproj  ServiceCollectionExtensions.cs
api/App/Abstractions/: IFactoryQueries.cs  IMachineCommandRepository.cs  IMachineTelemetryPacketRepository.cs  IPartRepository.cs  IPartsQueries.cs  IPartsService.cs  IRecordStore.cs  ITelemetryService.cs
api/App/Commands/: CommandsService.cs
api/App/Factory/: FactoryStateSnapshot.cs
api/App/Parts/: PartLog.cs  PartsService.cs
api/App/Telemetry/: TelemetryService.cs
api/Domain/Machines/: Machine.cs  MachineCommand.cs  MachineCommandType.cs
api/Infra/: ServiceCollectionExtensions.cs
machine/: Cargo.toml  Dockerfile  build.rs
machine/src/: config.rs  main.rs  simulation.rs  state.rs
machine/src/comms/: comms.proto
proto/: comms.proto
web/: .dockerignore  Dockerfile  Fabricore.slnx  angular.json  package.json  pnpm-lock.yaml
web/Api/: Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
web/App/: ServiceCollectionExtensions.cs
web/Infra/: Infra.csproj  ServiceCollectionExtensions.cs
web/src/: index.html  styles.scss
(+61 files in other folders)
