[package]
name = "machine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
futures = "0.3.32"
prost = "0.14.3"
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "ansi"] }

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
async-stream = "0.3.6"
